--- a/content/assignment/11-hw4.Rmd
+++ b/content/assignment/11-hw4.Rmd
@@ -105,6 +105,42 @@ system.time({
 
 ## SQL
 
-TBD
+Setup a temporary database by running the following chunk
 
+```{r, eval = FALSE}
+# install.packages(c("RSQLite", "DBI"))
 
+library(RSQLite)
+library(DBI)
+
+# Initialize a temporary in memory database
+con <- dbConnect(SQLite(), ":memory:")
+
+# Download tables
+film <- read.csv("https://raw.githubusercontent.com/ivanceras/sakila/master/csv-sakila-db/film.csv")
+film_category <- read.csv("https://raw.githubusercontent.com/ivanceras/sakila/master/csv-sakila-db/film_category.csv")
+category <- read.csv("https://raw.githubusercontent.com/ivanceras/sakila/master/csv-sakila-db/category.csv")
+
+# Copy data.frames to database
+dbWriteTable(con, "film", film)
+dbWriteTable(con, "film_category", film_category)
+dbWriteTable(con, "category", category)
+```
+
+When you write a new chunk, remember to replace the `r` with `sql, connection=con`. Some of these questions will reqruire you to use an  inner join. Read more about them here https://www.w3schools.com/sql/sql_join_inner.asp
+
+## Question 1
+
+How many many movies is there avaliable in each `rating` catagory.
+
+## Question 2
+
+What is the average replacement cost and rental rate for each `rating` category.
+
+## Question 3
+
+Use table `film_category` together with `film` to find the how many films there are witth each category ID 
+
+## Question 4
+
+Incorporate table `category` into the answer to the previous question to find the name of the most popular category.
