Fixing bug in assignment 4

--- a/content/assignment/11-hw4.Rmd
+++ b/content/assignment/11-hw4.Rmd
@@ -29,14 +29,14 @@ fun1alt <- function(mat) {
   # YOUR CODE HERE
 }
 
-# Cumulative product by row
+# Cumulative sum by row
 fun2 <- function(mat) {
   n <- nrow(mat)
-  K <- ncol(mat)
+  k <- ncol(mat)
   ans <- mat
   for (i in 1:n) {
-    for (j in 2:k)
-      ans[i,j] <- mat[i, k] + ans[i, k - 1]
+    for (j in 2:k) {
+      ans[i,j] <- mat[i, j] + ans[i, j - 1]
     }
   }
   ans
@@ -54,13 +54,13 @@ dat <- matrix(rnorm(200 * 100), nrow = 200)
 # Test for the first
 microbenchmark::microbenchmark(
   fun1(dat),
-  fun1alt(dat), unit = “relative”, check = “equivalent”
+  fun1alt(dat), unit = "relative", check = "equivalent"
 )
 
 # Test for the second
 microbenchmark::microbenchmark(
   fun2(dat),
-  fun2alt(dat), unit = “relative”, check = “equivalent”
+  fun2alt(dat), unit = "relative", check = "equivalent"
 )
 ```
 
