--- a/static/slides/11-interactive-viz/slides.Rmd
+++ b/static/slides/11-interactive-viz/slides.Rmd
@@ -32,6 +32,7 @@ code.r,code.cpp{
 ```{r include=FALSE}
 library(knitr)
 library(here)
+library(magrittr)
 
 opts_chunk$set(
   echo = TRUE,
@@ -760,6 +761,7 @@ p <- ggplot(diamonds, aes(x = log(price), color = clarity)) +
     geom_freqpoly(stat = "density") + 
     facet_wrap(~cut)
 ggplotly(p)
+
 ```
 
 ---
