--- a/content/assignment/11-lab-answers.Rmd
+++ b/content/assignment/11-lab-answers.Rmd
@@ -18,7 +18,7 @@ library(knitr)
 opts_chunk$set(
   warning = FALSE,
   message = FALSE,
-  eval=FALSE,
+  #eval=FALSE,
   echo = TRUE,
   fig.width = 7, 
   fig.align = 'center',
@@ -37,7 +37,9 @@ opts_chunk$set(
 
 # Lab Description
 
-We will work with the COVID data presented in lecture. Recall the dataset consists of COVID-19 cases and deaths in each US state during the course of the COVID epidemic. We will explore cases, deaths, and their population normalized values over time to identify trends.
+We will work with the COVID data presented in lecture. Recall the dataset consists of COVID-19 cases and deaths in each US state during the course of the COVID epidemic.
+
+**The objective of this lab is to identify how long after cases increased deaths increased, and after cases decreased deaths decreased, and plot data to demonstrate this**
 
 # Steps
 
@@ -58,21 +60,14 @@ We will work with the COVID data presented in lecture. Recall the dataset consis
 # https://github.com/COVID19Tracking/associated-data/tree/master/us_census_data
 
 # load COVID state-level data from NYT
-### FINISH THE CODE HERE ###
-cv_states <- as.data.frame( ___ )
+cv_states <- as.data.frame(data.table::fread("https://raw.githubusercontent.com/nytimes/covid-19-data/master/us-states.csv"))
 
 # load state population data
-### FINISH THE CODE HERE ###
-state_pops <- as.data.frame( ___ )
-
+state_pops <- as.data.frame(data.table::fread("https://raw.githubusercontent.com/COVID19Tracking/associated-data/master/us_census_data/us_census_2018_population_estimates_states.csv"))
 state_pops$abb <- state_pops$state
 state_pops$state <- state_pops$state_name
 state_pops$state_name <- NULL
-
-### FINISH THE CODE HERE ###
-cv_states <- merge(
-  
-)
+cv_states <- merge(cv_states, state_pops, by="state")
 ```
 
 ### 2. Look at the data
@@ -90,7 +85,7 @@ str(cv_states)
 ### 3. Format the data
 
 - Make date into a date variable
-- Make `state` and `abb` into a factor variable
+- Make state into a factor variable
 - Order the data first by state, second by date
 - Confirm the variables are now correctly formatted
 - Inspect the range values for each variable. What is the date range? The range of cases and deaths?
@@ -99,15 +94,12 @@ str(cv_states)
 # format the date
 cv_states$date <- as.Date(cv_states$date, format="%Y-%m-%d")
 
-# format the state variable
+# format the state and state abbreviation (abb) variables
 state_list <- unique(cv_states$state)
 cv_states$state <- factor(cv_states$state, levels = state_list)
+abb_list <- unique(cv_states$abb)
+cv_states$abb <- factor(cv_states$abb, levels = abb_list)
 
-# format the state abbreviation (abb) variable
-### FINISH THE CODE HERE ###
-abb_list = ___ 
-cv_states$abb = ___
-  
 # order the data first by state, second by date
 cv_states = cv_states[order(cv_states$state, cv_states$date),]
 
@@ -144,10 +136,9 @@ for (i in 1:length(state_list)) {
   cv_subset$new_cases = cv_subset$cases[1]
   cv_subset$new_deaths = cv_subset$deaths[1]
 
-  #### FINISH THE CODE HERE ###
   for (j in 2:nrow(cv_subset)) {
-    cv_subset$new_cases[j] =  ___ 
-    cv_subset$new_deaths[j] = ___
+    cv_subset$new_cases[j] = cv_subset$cases[j] - cv_subset$cases[j-1]
+    cv_subset$new_deaths[j] = cv_subset$deaths[j] - cv_subset$deaths[j-1]
   }
 
   # include in main dataset
@@ -155,18 +146,12 @@ for (i in 1:length(state_list)) {
   cv_states$new_deaths[cv_states$state==state_list[i]] = cv_subset$new_deaths
 }
 
-# Inspect outliers in new_cases and new_deaths using plotly
-### FINISH THE CODE HERE ###
-p1<-ggplot(cv_states, 
-           aes( ___ )
-           ) + geom_line() + geom_point(size = .5, alpha = 0.5)
+# Inspect outliers using plotly
+p1<-ggplot(cv_states, aes(x = date, y = new_cases, color = state)) + geom_line() + geom_point(size = .5, alpha = 0.5)
 ggplotly(p1)
 p1<-NULL # to clear from workspace
 
-### FINISH THE CODE HERE ###
-p2<-ggplot(cv_states, 
-           aes(___)
-           ) + geom_line() + geom_point(size = .5, alpha = 0.5)
+p2<-ggplot(cv_states, aes(x = date, y = new_deaths, color = state)) + geom_line() + geom_point(size = .5, alpha = 0.5)
 ggplotly(p2)
 p2<-NULL # to clear from workspace
 
@@ -216,12 +201,11 @@ cv_states$newdeathsper100k =  as.numeric(format(round(cv_states$new_deaths/(cv_s
 cv_states = cv_states %>% mutate(naive_CFR = round((deaths*100/cases),2))
 
 # create a `cv_states_today` variable
-### FINISH THE CODE HERE ###
-cv_states_today = ___ 
+cv_states_today = subset(cv_states, date==max(cv_states$date))
 
 ```
 
-## II. Interactive plots
+## II. Scatterplots
 
 ### 6. Explore scatterplots using `plot_ly()`
 
@@ -236,9 +220,8 @@ cv_states_today = ___
 ```{r}
 
 # pop_density vs. cases
-### FINISH THE CODE HERE ###
 cv_states_today %>% 
-  plot_ly(x = ___, y = ___, 
+  plot_ly(x = ~pop_density, y = ~cases, 
           type = 'scatter', mode = 'markers', color = ~state,
           size = ~population, sizes = c(5, 70), marker = list(sizemode='diameter', opacity=0.5))
 
@@ -247,13 +230,13 @@ cv_states_today_scatter <- cv_states_today %>% filter(state!="District of Columb
 
 # pop_density vs. cases after filtering
 cv_states_today_scatter %>% filter(state!="District of Columbia") %>% 
-  plot_ly(x = ___, y = ___, 
+  plot_ly(x = ~pop_density, y = ~cases, 
           type = 'scatter', mode = 'markers', color = ~state,
           size = ~population, sizes = c(5, 70), marker = list(sizemode='diameter', opacity=0.5))
 
 # pop_density vs. deathsper100k
 cv_states_today_scatter %>% filter(state!="District of Columbia") %>% 
-  plot_ly(x = ___, y = ___, 
+  plot_ly(x = ~pop_density, y = ~deathsper100k, z = ~population,
           type = 'scatter', mode = 'markers', color = ~state,
           size = ~population, sizes = c(5, 70), marker = list(sizemode='diameter', opacity=0.5))
 
@@ -273,13 +256,11 @@ cv_states_today_scatter %>%
 ### 7. Explore scatterplot trend interactively using `ggplotly()` and `geom_smooth()`
 
 - For `pop_density` vs. `newdeathsper100k` create a chart with the same variables using `gglot_ly()`
-  - What's the `geom_*()` we need here?
 - Explore the pattern between $x$ and $y$ using `geom_smooth()`
   - Explain what you see. Do you think `pop_density` is a correlate of `newdeathsper100k`?
 
 ```{r}
-### FINISH THE CODE HERE ###
-p <- ggplot(cv_states_today_scatter, aes(x=pop_density, y=deathsper100k, size=population)) + geom____ 
+p <- ggplot(cv_states_today_scatter, aes(x=pop_density, y=deathsper100k, size=population)) + geom_point() + geom_smooth()
 ggplotly(p)
 ```
 
@@ -289,7 +270,7 @@ ggplotly(p)
 - Create a line chart of the `naive_CFR` for all states over time using `plot_ly()`
   - Use hoverinfo to identify states that had a "first peak"
   - Use the zoom and pan tools to inspect the `naive_CFR` for the states that had a "first peak" in September. How have they changed over time?
-- Create one more line chart, for Texas only, which shows `new_cases` and `new_deaths` together in one plot. Hint: use `add_lines()`
+- Create one more line chart, for Texas only, which shows `new_cases` and `new_deaths` together in one plot. Hint: use `add_layer()`
   - Use hoverinfo to "eyeball" the approximate peak of deaths and peak of cases. What is the time delay between the peak of cases and the peak of deaths?
 
 ```{r}
@@ -298,8 +279,7 @@ ggplotly(p)
 plot_ly(cv_states, x = ~date, y = ~naive_CFR, color = ~state, type = "scatter", mode = "lines")
 
 # Line chart for Texas showing new_cases and new_deaths together
-### FINISH THE CODE HERE ###
-cv_states %>% filter(state=="Texas") %>% plot_ly(x = ~date, y = ~new_cases, type = "scatter", mode = "lines") %>% ___
+cv_states %>% filter(state=="Texas") %>% plot_ly(x = ~date, y = ~new_cases, type = "scatter", mode = "lines") %>% add_lines(x = ~date, y = ~new_deaths, type = "scatter", mode = "lines") 
 
 ```
 
@@ -330,9 +310,7 @@ plot_ly(x=colnames(cv_states_mat2), y=rownames(cv_states_mat2),
 # Create a second heatmap after filtering to only include dates every other week
 filter_dates <- seq(as.Date("2020-04-01"), as.Date("2020-10-01"), by="2 weeks")
 
-### FINISH THE CODE HERE ### 
-cv_states_mat <- cv_states %>% select(state, date, new_cases) %>% filter( ___ )
-
+cv_states_mat <- cv_states %>% select(state, date, new_cases) %>% filter(date %in% filter_dates)
 cv_states_mat2 <- as.data.frame(pivot_wider(cv_states_mat, names_from = state, values_from = new_cases))
 rownames(cv_states_mat2) <- cv_states_mat2$date
 cv_states_mat2$date <- NULL
@@ -349,7 +327,7 @@ plot_ly(x=colnames(cv_states_mat2), y=rownames(cv_states_mat2),
 
 - Create a map to visualize the `naive_CFR` by state on May 1st, 2020
 - Compare with a map visualizing the `naive_CFR` by state on most recent date
-- Plot the two maps side by side using `subplot()`. Make sure the shading is for the same range of values (google is your friend for this)
+- Plot the two maps together using `subplot()`. Make sure the shading is for the same range of values (google is your friend for this)
 - Describe the difference in the pattern of the CFR.
 
 ```{r}
@@ -382,7 +360,7 @@ fig <- plot_geo(cv_CFR, locationmode = 'USA-states') %>%
     z = ~naive_CFR, text = ~hover, locations = ~state,
     color = ~naive_CFR, colors = 'Purples'
   )
-fig <- fig %>% colorbar(title = "CFR May 1 2020", ___ = c(0,shadeLimit))
+fig <- fig %>% colorbar(title = "CFR May 1 2020", limits = c(0,shadeLimit))
 fig <- fig %>% layout(
     title = paste('CFR by State as of', Sys.Date(), '<br>(Hover for value)'),
     geo = set_map_details
@@ -415,7 +393,7 @@ fig <- plot_geo(cv_CFR, locationmode = 'USA-states') %>%
     z = ~naive_CFR, text = ~hover, locations = ~state,
     color = ~naive_CFR, colors = 'Purples'
   )
-fig <- fig %>% colorbar(title = "CFR May 1 2020", ___ = c(0,shadeLimit))
+fig <- fig %>% colorbar(title = "CFR May 1 2020", limits = c(0,shadeLimit))
 fig <- fig %>% layout(
     title = paste('CFR by State as of', Sys.Date(), '<br>(Hover for value)'),
     geo = set_map_details
@@ -423,12 +401,9 @@ fig <- fig %>% layout(
 fig_Today <- fig
 
 
-### Plot side by side 
-### FINISH THE CODE HERE ###
-subplot( ___ )
+### Plot together 
+subplot(fig_May1, fig_Today)
 
 ```
-
-
 
 
