--- a/content/class/12-class.Rmd
+++ b/content/class/12-class.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Final project workshop: review project progress, preliminary presentations"
-linktitle: "12: Final project"
+title: "Interactive visualization and effective data communication II"
+linktitle: "12: Interactive Visualization II"
 date: "2020-11-04"
 class_date: "2020-11-04"
 citeproc: false
@@ -22,12 +22,8 @@ editor_options:
 
 ## Lab Exercise
 
-To be announced
+Lab is on a website at [this link](https://abigailhorn.github.io/PM566-final-project/12-lab.html)
 
 ## Slides
 
-To be announced
-
-## Links
-
-To be announced
+[link](/slides/12-interactive-viz2/slides.html)
