--- a/content/class/13-class.Rmd
+++ b/content/class/13-class.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Interactive visualization and effective data communication II"
-linktitle: "13: Interactive Visualization II"
+title: "Final project workshop: review project progress, preliminary presentations"
+linktitle: "13: Final project"
 date: "2020-11-11"
 class_date: "2020-11-11"
 citeproc: false
