--- a/website/content/class/01-class.Rmd
+++ b/website/content/class/01-class.Rmd
@@ -22,14 +22,14 @@ editor_options:
 
 ## Lab Exercise
 
-[link](/assignment/01-lab)
+[link](assignment/01-lab)
 
 
-[Download](/assignment/pm566-01-lab.zip)
+[Download](assignment/pm566-01-lab.zip)
 
 ## Slides
 
-[link](/slides/01-welcome/slides.html)
+[link](slides/01-welcome/slides.html)
 
 ## Links
 
