--- a/website/content/class/01-class.Rmd
+++ b/website/content/class/01-class.Rmd
@@ -25,11 +25,11 @@ editor_options:
 [link](assignment/01-lab)
 
 
-[Download](assignment/pm566-01-lab.zip)
+[Download](PM566/assignment/pm566-01-lab.zip)
 
 ## Slides
 
-[link](slides/01-welcome/slides.html)
+[link](PM566/slides/01-welcome/slides.html)
 
 ## Links
 
