--- a/website/content/class/03-class.Rmd
+++ b/website/content/class/03-class.Rmd
@@ -22,11 +22,11 @@ editor_options:
 
 ## Lab Exercise
 
-[link](PM566/assignment/03-lab)
+[link](/PM566/assignment/03-lab)
 
 ## Slides
 
-[link](PM566/slides/03-exploratory/slides.html)
+[link](/PM566/slides/03-exploratory/slides.html)
 
 ## Links
 
